Moved inline styles into stylesheet

--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,26 @@ html {
     
 }
 
-body {background: black;
+body {
+    background: black;
     font-family: sans-serif;
-    color: white;}
+    color: white;
+}
 
-h1{padding: 50px; margin: 100px; position: relative; left 0px}
+img.main-image {
+    position: absolute; 
+    top: 0px; 
+    left: 400px; 
+    width: 700px;
+    height: 700px;
+}
 
-  <img style="positon:relative; TOP:100px;LEFT:400px; width:700px;height:700px" src=Stagephoto.jpg"></im>  
+h1 {
+    padding: 50px; 
+    margin: 100px; 
+    position: relative; 
+    left: 0px
+}
 
 
 h1, h2, h3, h4, h5, h6 {
