--- a/css/style.css
+++ b/css/style.css
@@ -84,11 +84,17 @@ h2 {
     
 .buffer{
     padding: 100px 100px;
-    margin: 100px;
+    margin: 100px;}
+
+.buffer .background-image {   
+    position: relative;
+    top: 800px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
     background-image: url(fabric.photo.jpg); 
     background background-size: contain;
+    resize: 100%;
     background-repeat: no-repeat;
     background-position: right center;
-    
-    
 }
