--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,15 @@ h4{
     display: block;
     font-size: 1.5em;
     font-weight: bold;
+    font-family: solomon;
 }
 
+h5{
+    display: block;
+    font-size: 14px;
+    color: aliceblue;
+    font-family: solomon;
+}
 
 /* HERO SECTION */
 
@@ -77,17 +84,11 @@ h2 {
     font-size: 75%;   
 }
 
-.overview{
-    text-align: center;
-    background-color: white;
-    color: black;
-    padding: 100px;
-    left: 0px;
-}
-
 .buffer{
     height: 60vh;
     position: relative;
+    float: left;
+    width: 100%
 }
 
 .buffer .background-image {   
@@ -112,6 +113,32 @@ b.button {
     margin: 10px;
     top: 170px;
     left: 350px;
+}
+
+.bio .container{
+    text-align: left;
+    background-color: white;
+    color: black;
+    padding: 20px;
+    /* left: 0px; */
+    width: 49%;
+    font-family: solomon;
+    box-sizing: border-box;
+}
+
+.fifty{
+    display: inline-block;
+    float: left;
+}
+
+.skills{
+    background-color: white;
+    color: black;
+    padding: 50px;
+    left: 0px;
+    width: 49%;
+    margin-left: 397px;
+    margin-top: -230px;
 }
 
 .work-expereince .wrapper{
@@ -158,7 +185,5 @@ margin-top: 5px;
     margin-top: 15px;
 }
 
-}
 
-}
 
